Adding more to MVC application.

--- a/githubMVCApplication/Views/Home/Index.cshtml
+++ b/githubMVCApplication/Views/Home/Index.cshtml
@@ -3,7 +3,8 @@
 }
 
 <div>
-    <h1>My Repositories</h1>
+
+    <h1>@Model.User.Name</h1>
     <ul>
         @foreach(var repository in Model.Repositories)
         {
