--- a/githubMVCApplication/Views/Home/Index.cshtml
+++ b/githubMVCApplication/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
-    ViewBag.Title = "My Repositories";
+    ViewBag.Title = Model.User.Login;
 }
 
 <div>
-
+    <img src="@Model.User.AvatarUrl" />
     <h1>@Model.User.Name</h1>
+    <h4>Popular Repositories</h4>
     <ul>
         @foreach(var repository in Model.Repositories)
         {
